[package]
name = "mini-universe"
version = "0.1.0"
authors = ["cuiter <casper.uiterwijk@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
rand_pcg = "0.2"
vek = "0.12"
process_path = "0.1"
strum = "0.20"
strum_macros = "0.20"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["image"]
